--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "^12.2.0",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "^12.2.0",
-    "typescript": "~4.2.4"
+    "typescript": "^4.2.4"
   }
 }
